# mvp-backend

./: .gitignore  Dockerfile  README.md  app.py  carrega_db.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/database/: config.py  connect.py  create_tables.sql  models.py
database/: __init__.py  carga_inicial.py  create_tables.sql  hash.py  init_db.py  inserts.sql
models/: __init__.py  alunos.py  inscricao.py  matricula.py  pessoa.py  professor.py  schemas.py  turma.py
schemas/: __init__.py  aluno.py  endereco.py  error.py  inscricao.py  matricula.py  pessoa.py  professor.py  turma.py
utils/: config.py
