[tool.poetry]
name = "mvp-backend"
version = "0.1.0"
description = "A system for registering students in a beach tennis school. This system was developed to achieve approval in the first sprint of the Software Engineering Post-Graduation program at PUC-Rio."
authors = ["Nilane Arruda <nyllane16@gmail.com>"]
readme = "README.md"
packages = [{include = "mvp_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
environs = "^11.0.0"
passlib = "^1.7.4"
pydantic = "^2.7.4"
sqlalchemy-utils = "^0.41.2"
flask-openapi3 = "^3.1.3"
flask-cors = "^4.0.1"
ruff = "^0.11.3"

[tool.mypy]
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
